# awwssistant

./: .env.example  Makefile  README.md  awwsistant.py  bot.py  functions.py  pyproject.toml  requirements.txt  test.py  vision.py
awwsistant/: __init__.py  awwsistant.py  bot.py  functions.py  vision.py
openai_airline/: README.md  __main__.py
openai_airline/configs/: agents.py
swarmistant/: __main__.py  agents.py
tests/: awwsistant_test.py
