[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "awwsistant"
version = "0.1.0"
description = "awwsistant bot"
authors = ["fordnox <fordnox@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = {extras = ["all"], version = "^20.7"}
openai = "^1.3.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[tool.pytest.ini_options]
addopts = "-rsx -v --import-mode=importlib"
testpaths = [
    "tests"
]
