[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "awwsistant"
version = "0.1.0"
description = "awwsistant bot"
authors = ["fordnox <fordnox@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["all"], version = "^20.7"}
openai = "^1.51.2"
requests = "^2.31.0"

[tool.poetry.group.swarm.dependencies]
swarm = { git = "https://github.com/openai/swarm.git" }

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
isort = "5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"

[tool.pytest.ini_options]
addopts = "-rsx -v --import-mode=importlib"
testpaths = [
    "tests"
]
